@@ -2,7 +2,7 @@
 /*
  *  R : A Computer Langage for Statistical Data Analysis
  *  Copyright (C) 1995, 1996, 1997  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997--2013  The R Core Team
+ *  Copyright (C) 1997--2014  The R Core Team
  *  Copyright (C) 2009--2011  Romain Francois
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -2460,6 +2460,7 @@ static int StringValue(int c, Rboolean forSymbol)
 		    break;
 		case '"':
 		case '\'':
+		case '`':
 		case ' ':
 		case '\n':
 		    break;
